@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Blueprint Test Suite</title>
+	<title>Blueprint test pages</title>
 
   <!-- Framework CSS -->
 	<link rel="stylesheet" href="../blueprint/screen.css" type="text/css" media="screen, projection">
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">  
-		<h1>Blueprint tests</h1>
+		<h1>Blueprint test pages</h1>
 		<hr>
 		
 		<p>Welcome to the Blueprint Test Suite. The HTML files below tests most HTML elements, and especially classes provided
@@ -43,9 +43,8 @@
 		  </tr>
 		</table>
 		
-	  <h6>Note about the compressed versions:</h6>
-	  <p>These test files utilize the compressed versions of the framework.
-	     In other words, if you change any of the core files,
+	  <p><em><strong>Note about the compressed versions:</strong></em>
+	     These test files utilize the compressed files. In other words, if you change any of the core files,
 	     you'll have to re-compress them with the ruby script in the scripts folder to see any changes.</p>
 	  
 	 	<div class="box">
